--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
